fix(a11y): detail color contrast

--- a/src/index.css
+++ b/src/index.css
@@ -10,9 +10,9 @@
 
   --color-secondary: #181737;
 
-  --color-detail: #497b9d;
-  --color-detail-disabled: #6d7f8f;
-  --color-detail-hover: #385f79;
+  --color-detail: #33556d;
+  --color-detail-disabled: #3f515f;
+  --color-detail-hover: #2b485d;
   --color-detail-backdrop: #385f7920;
 
   --color-backdrop: rgb(0 0 0 / 20%);
